gitops/system/base/victoria-metrics/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: victoria-metrics
  labels:
    env: prod
